Added JavaDoc documentation for the MVC + Recipe classes